# cli-script-runner

./: .env.dev  .gitignore  composer.json
api_logs/: stb_api_2025-04-22_09-21-20.jsonl  stb_api_2025-04-22_09-21-30.jsonl  stb_api_2025-04-22_09-21-40.jsonl  stb_api_2025-04-22_09-26-28.jsonl  stb_api_2025-04-22_09-26-33.jsonl  stb_api_2025-04-22_09-26-39.jsonl  stb_api_2025-04-22_09-26-44.jsonl  stb_api_2025-04-22_09-26-49.jsonl  stb_api_2025-04-22_09-26-54.jsonl  stb_api_2025-04-22_09-26-59.jsonl  stb_api_2025-04-22_09-27-04.jsonl  stb_api_2025-04-22_09-27-09.jsonl  stb_api_2025-04-22_09-27-15.jsonl  stb_api_2025-04-22_09-27-20.jsonl  stb_api_2025-04-22_09-27-25.jsonl  stb_api_2025-04-22_09-27-30.jsonl  stb_api_2025-04-22_09-27-36.jsonl  stb_api_2025-04-22_09-27-41.jsonl  stb_api_2025-04-22_09-27-46.jsonl  stb_api_2025-04-22_09-27-51.jsonl  stb_api_2025-04-22_09-27-56.jsonl  stb_api_2025-04-22_09-28-01.jsonl  stb_api_2025-04-22_09-28-11.jsonl  stb_api_2025-04-22_09-28-16.jsonl  stb_api_2025-04-22_09-28-21.jsonl  stb_api_2025-04-22_09-28-27.jsonl  stb_api_2025-04-22_09-28-32.jsonl  stb_api_2025-04-22_09-28-37.jsonl  stb_api_2025-04-22_09-28-42.jsonl  stb_api_2025-04-23_09-35-12.jsonl  stb_api_2025-04-23_09-35-22.jsonl  stb_api_2025-04-23_09-39-54.jsonl  stb_api_2025-04-23_09-39-59.jsonl  stb_api_2025-04-23_09-40-04.jsonl  stb_api_2025-04-23_09-40-09.jsonl  stb_api_2025-04-23_09-40-14.jsonl  stb_api_2025-04-23_09-40-19.jsonl  stb_api_2025-04-23_09-40-24.jsonl  stb_api_2025-04-23_09-40-29.jsonl  (+77 more)
src/Domain/modifiedScripts/: pyproject.toml  remote_control_stb.py
(+144 files in other folders)
