[project]
name = "modifiedScripts"
version = "0.1.0"
description = ""
authors = [
    {name = "Tivicon"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "logging (>=0.4.9.6,<0.5.0.0)",
    "uuid (>=1.30,<2.0)",
    "datetime (>=5.5,<6.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
